Fix desktop control bar elements alignment

--- a/src/implementations/vanilla/components/carousel/_carousel.scss
+++ b/src/implementations/vanilla/components/carousel/_carousel.scss
@@ -294,4 +294,9 @@ $_outline-width: null !default;
       );
     }
   }
+
+  .ecl-carousel__autoplay,
+  .ecl-carousel__pagination {
+    width: 10%;
+  }
 }
